muutettu tiedosto polkuja, yritetty pikaisesti sekoitusta

--- a/projekti-5/korttipeli.html
+++ b/projekti-5/korttipeli.html
@@ -9,75 +9,75 @@
   <body>
     <section class="muistipeli">
       <div class="kortti">
-        <img src="hiiri.jpg" class="etuosa" alt="hiiri">
-        <img src="question_mark.png" class="takaosa" alt="kysymysmerkki">
+        <img src="kuvat/hiiri.jpg" class="etuosa" alt="hiiri">
+        <img src="kuvat/question_mark.png" class="takaosa" alt="kysymysmerkki">
       </div>
       <div class="kortti">
-        <img src="hiiri.jpg" class="etuosa" alt="hiiri">
-        <img src="question_mark.png" class="takaosa" alt="kysymysmerkki">
-      </div>
-
-      <div class="kortti">
-        <img src="pingviini.jpg" class="etuosa" alt="pingviini">
-        <img src="question_mark.png" class="takaosa" alt="kysymysmerkki">
-      </div>
-      <div class="kortti">
-        <img src="pingviini.jpg" class="etuosa" alt="pingviini">
-        <img src="question_mark.png" class="takaosa" alt="kysymysmerkki">
+        <img src="kuvat/hiiri.jpg" class="etuosa" alt="hiiri">
+        <img src="kuvat/question_mark.png" class="takaosa" alt="kysymysmerkki">
       </div>
 
       <div class="kortti">
-        <img src="koira.jpg" class="etuosa" alt="koira">
-        <img src="question_mark.png" class="takaosa" alt="kysymysmerkki">
+        <img src="kuvat/pingviini.jpg" class="etuosa" alt="pingviini">
+        <img src="kuvat/question_mark.png" class="takaosa" alt="kysymysmerkki">
       </div>
       <div class="kortti">
-        <img src="koira.jpg" class="etuosa" alt="koira">
-        <img src="question_mark.png" class="takaosa" alt="kysymysmerkki">
-      </div>
-
-      <div class="kortti">
-        <img src="kettu.jpg" class="etuosa" alt="kettu">
-        <img src="question_mark.png" class="takaosa" alt="kysymysmerkki">
-      </div>
-      <div class="kortti">
-        <img src="kettu.jpg" class="etuosa" alt="kettu">
-        <img src="question_mark.png" class="takaosa" alt="kysymysmerkki">
+        <img src="kuvat/pingviini.jpg" class="etuosa" alt="pingviini">
+        <img src="kuvat/question_mark.png" class="takaosa" alt="kysymysmerkki">
       </div>
 
       <div class="kortti">
-        <img src="lehma.jpg" class="etuosa" alt="lehma">
-        <img src="question_mark.png" class="takaosa" alt="kysymysmerkki">
+        <img src="kuvat/koira.jpg" class="etuosa" alt="koira">
+        <img src="kuvat/question_mark.png" class="takaosa" alt="kysymysmerkki">
       </div>
       <div class="kortti">
-        <img src="lehma.jpg" class="etuosa" alt="lehma">
-        <img src="question_mark.png" class="takaosa" alt="kysymysmerkki">
-      </div>
-
-      <div class="kortti">
-        <img src="kissa.jpg" class="etuosa" alt="kissa">
-        <img src="question_mark.png" class="takaosa" alt="kysymysmerkki">
-      </div>
-      <div class="kortti">
-        <img src="kissa.jpg" class="etuosa" alt="kissa">
-        <img src="question_mark.png" class="takaosa" alt="kysymysmerkki">
+        <img src="kuvat/koira.jpg" class="etuosa" alt="koira">
+        <img src="kuvat/question_mark.png" class="takaosa" alt="kysymysmerkki">
       </div>
 
       <div class="kortti">
-        <img src="norsu.jpg" class="etuosa" alt="norsu">
-        <img src="question_mark.png" class="takaosa" alt="kysymysmerkki">
+        <img src="kuvat/kettu.jpg" class="etuosa" alt="kettu">
+        <img src="kuvat/question_mark.png" class="takaosa" alt="kysymysmerkki">
       </div>
       <div class="kortti">
-        <img src="norsu.jpg" class="etuosa" alt="norsu">
-        <img src="question_mark.png" class="takaosa" alt="kysymysmerkki">
+        <img src="kuvat/kettu.jpg" class="etuosa" alt="kettu">
+        <img src="kuvat/question_mark.png" class="takaosa" alt="kysymysmerkki">
       </div>
 
       <div class="kortti">
-        <img src="apina.jpg" class="etuosa" alt="apina">
-        <img src="question_mark.png" class="takaosa" alt="kysymysmerkki">
+        <img src="kuvat/lehma.jpg" class="etuosa" alt="lehma">
+        <img src="kuvat/question_mark.png" class="takaosa" alt="kysymysmerkki">
       </div>
       <div class="kortti">
-        <img src="apina.jpg" class="etuosa" alt="apina">
-        <img src="question_mark.png" class="takaosa" alt="kysymysmerkki">
+        <img src="kuvat/lehma.jpg" class="etuosa" alt="lehma">
+        <img src="kuvat/question_mark.png" class="takaosa" alt="kysymysmerkki">
+      </div>
+
+      <div class="kortti">
+        <img src="kuvat/kissa.jpg" class="etuosa" alt="kissa">
+        <img src="kuvat/question_mark.png" class="takaosa" alt="kysymysmerkki">
+      </div>
+      <div class="kortti">
+        <img src="kuvat/kissa.jpg" class="etuosa" alt="kissa">
+        <img src="kuvat/question_mark.png" class="takaosa" alt="kysymysmerkki">
+      </div>
+
+      <div class="kortti">
+        <img src="kuvat/norsu.jpg" class="etuosa" alt="norsu">
+        <img src="kuvat/question_mark.png" class="takaosa" alt="kysymysmerkki">
+      </div>
+      <div class="kortti">
+        <img src="kuvat/norsu.jpg" class="etuosa" alt="norsu">
+        <img src="kuvat/question_mark.png" class="takaosa" alt="kysymysmerkki">
+      </div>
+
+      <div class="kortti">
+        <img src="kuvat/apina.jpg" class="etuosa" alt="apina">
+        <img src="kuvat/question_mark.png" class="takaosa" alt="kysymysmerkki">
+      </div>
+      <div class="kortti">
+        <img src="kuvat/apina.jpg" class="etuosa" alt="apina">
+        <img src="kuvat/question_mark.png" class="takaosa" alt="kysymysmerkki">
       </div>
     </section>
     <script src="korttipeli.js" charset="utf-8"></script> <!--ÄLÄ SIIRRÄ! Koodi ei toimi jos tämä siirretään ylös. -->
