--- a/omaProjekti/piirrustusOhjelma.html
+++ b/omaProjekti/piirrustusOhjelma.html
@@ -10,7 +10,7 @@
   <body>
     <canvas id="canvas" width="1300" height="650"></canvas>
     <section>
-      <button type="button" id="poistaKaikki">POISTA KAIKKI</button>
+      <button type="button" onclick="poista()" id="poistaKaikki">POISTA KAIKKI</button>
       <button type="button" id="kumoa">KUMOA</button>
       <button type="button" id="palauta">PALAUTA</button>
 
