--- a/omaProjekti/piirrustusOhjelma.html
+++ b/omaProjekti/piirrustusOhjelma.html
@@ -19,7 +19,7 @@
       <div id="sininen"></div>
       <div id="musta"></div>
 
-      <input  id="kynänPaksuus" type="range" min="1" max="100" value="50">
+      <input onchange="changeWidth(this.value)" id="kynänPaksuus" type="range" min="1" max="20" value="3">
     </section>
     <script src="piirrustusOhjelma.js"></script> <!-- ÄLÄ SIIRRÄ!! -->
   </body>
