Värien HTML-koodia muutettu

--- a/omaProjekti/piirrustusOhjelma.html
+++ b/omaProjekti/piirrustusOhjelma.html
@@ -14,10 +14,10 @@
       <button type="button" id="kumoa">KUMOA</button>
       <button type="button" id="palauta">PALAUTA</button>
 
-      <div id="punainen"></div>
-      <div id="vihreä"></div>
-      <div id="sininen"></div>
-      <div id="musta"></div>
+      <div onclick="changeColor('#F20D0D')" id="punainen"></div>
+      <div onclick="changeColor('#42DE0C')" id="vihreä"></div>
+      <div onclick="changeColor('#2B98FF')" id="sininen"></div>
+      <div onclick="changeColor('#000')" id="musta"></div>
 
       <input onchange="changeWidth(this.value)" id="kynänPaksuus" type="range" min="1" max="20" value="3">
     </section>
