--- a/omaProjekti/piirrustusOhjelma.html
+++ b/omaProjekti/piirrustusOhjelma.html
@@ -11,8 +11,7 @@
     <canvas id="canvas" width="1300" height="650"></canvas>
     <section>
       <button type="button" onclick="poista()" id="poistaKaikki">POISTA KAIKKI</button>
-      <button type="button" id="kumoa">KUMOA</button>
-      <button type="button" id="palauta">PALAUTA</button>
+      <button type="button" id="tallenna">TALLENNA</button>
 
       <div onclick="changeColor('#F20D0D')" id="punainen"></div>
       <div onclick="changeColor('#42DE0C')" id="vihreä"></div>
